# ImgKit-Scuti

./: .gitignore  Cargo.toml  README.md
.github/: CHANGELOG.md
.github/docs/: README.zh-CN.md
.github/workflows/: build-alpha.yml  build-release.yml
.github/workflows/release-notes/: release-notes.md
src/: lib.rs  main.rs  utils.rs
src/cli/: extract.rs  super_pack.rs
src/container/super_partition/: extractor.rs
src/filesystem/erofs/read/: extractor.rs
src/filesystem/ext4/: extractor.rs
src/filesystem/ext4/write/: builder.rs
src/filesystem/f2fs/: types.rs
src/filesystem/f2fs/read/: directory.rs  extractor.rs  file.rs
src/filesystem/f2fs/write/: builder.rs  ssa.rs
src/utils/: path.rs  selinux.rs
